<resources>
    <string name="app_name">ReservPark</string>
    <string name="texto_boton_registrar">Registrar parqueadero</string>
    <string name="texto_nombre">Nombre</string>
    <string name="texto_direccion">Direccion</string>
    <string name="texto_cupo">Cupo</string>
    <string name="texto_tarifa">Tarifa</string>
    <string name="texto_horario">Horario</string>
    <string name="texto_btn_crearpark">Registrar parqueadero</string>
    <string name="textoNombre">Nombre</string>
    <string name="textoDireccion">Direccion</string>
    <string name="textoCupo">Cupo</string>
    <string name="textoTarifa">Tarifa</string>
    <string name="textoHorario">Horario</string>
    <string name="texto_mg">Me gusta</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txtNombreView">Parqueadero:</string>
    <string name="txtDireccionView">Dirección:</string>
    <string name="txtCupoView">Cupos:</string>
    <string name="txtTarifaView">Tarifa:</string>
    <string name="txtPorMin">Pesos por minuto</string>
    <string name="Regresar">REGRESAR</string>
</resources>
