<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/personasCard"
    android:layout_margin="20px"
    app:cardElevation="10px">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500px"
            android:scaleType="centerCrop"
            android:src="@drawable/logoreservpark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#90000000"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtNombreView"
                    android:textColor="@color/colorAzulClaro"
                    android:textStyle="bold"
                    android:textSize="8pt"/>
                <TextView
                    android:id="@+id/cvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoNombre"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtDireccionView"
                    android:textColor="@color/colorAzulClaro"
                    android:textStyle="bold"
                    android:textSize="8pt"/>
                <TextView
                    android:id="@+id/cvDireccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoDireccion"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginLeft="37dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCupoView"
                    android:textColor="@color/colorAzulClaro"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/cvCupo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoCupo"
                    android:textColor="@android:color/white"
                    android:textSize="8pt"
                    android:textStyle="bold"
                    android:layout_marginLeft="62dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTarifaView"
                    android:textColor="@color/colorAzulClaro"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/cvTarifa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoTarifa"
                    android:textColor="@android:color/white"
                    android:textSize="8pt"
                    android:textStyle="bold"
                    android:layout_marginLeft="65dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPorMin"
                    android:textColor="@android:color/white"
                    android:textSize="8pt"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoHorario"
                    android:textColor="@color/colorAzulClaro"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/cvHorario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoHorario"
                    android:textColor="@android:color/white"
                    android:textSize="8pt"
                    android:textStyle="bold"
                    android:layout_marginLeft="60dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10px"
                android:gravity="right">
                <!--<CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_mg"
                    android:textSize="5pt"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>